--- a/.github/workflows/template-sync.yml
+++ b/.github/workflows/template-sync.yml
@@ -23,5 +23,6 @@ jobs:
         source_repo_path: ventingcloud/template-test
         upstream_branch: main # defaults to main
         pr_labels: template_sync # defaults to template_sync
+        pr_reviewers: jeffmccollum
         #source_gh_token: ${{ secrets.GITHUB_TOKEN }}
         #target_gh_token: ${{ secrets.TARGET_TOKEN }}
